--- a/app/globals.css
+++ b/app/globals.css
@@ -123,3 +123,12 @@
   margin-bottom: 5px !important;
   /* align-items: flex-start !important; */
 }
+
+@layer utilities {
+  .animation-delay-2000 {
+    animation-delay: 2s;
+  }
+  .animation-delay-4000 {
+    animation-delay: 4s;
+  }
+}
