--- a/app/globals.css
+++ b/app/globals.css
@@ -118,10 +118,21 @@
 }
 
 .ant-menu-item {
-  height: auto !important;
+  height: 50px !important;
   padding: 5px 15px !important;
   margin-bottom: 5px !important;
+  display: flex !important;
+  min-width: 55px !important;
+  align-items: center !important;
   /* align-items: flex-start !important; */
+}
+
+.ant-avatar {
+  width: 25px !important;
+  height: 25px !important;
+  line-height: 40px !important;
+  font-size: 12px !important;
+  min-width: 25px !important;
 }
 
 @layer utilities {
@@ -131,4 +142,11 @@
   .animation-delay-4000 {
     animation-delay: 4s;
   }
+}
+
+.ql-container {
+  overflow-y: auto;
+  max-height: 230px;
+  height: 230px;
+  min-height: 230px;
 }
