--- a/app/globals.css
+++ b/app/globals.css
@@ -180,3 +180,13 @@ html::-webkit-scrollbar {
   height: 230px;
   min-height: 230px;
 }
+
+.ant-table-body {
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll;
+}
+
+.ant-table-body::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
