--- a/app/globals.css
+++ b/app/globals.css
@@ -175,11 +175,28 @@ html::-webkit-scrollbar {
 }
 
 .ql-container {
+  /* overflow-y: auto;
+  max-height: 230px;
+  height: 230px;
+  min-height: 230px; */
+  background: #fff;
+}
+
+.custom-quill-container .ql-container {
   overflow-y: auto;
   max-height: 230px;
   height: 230px;
   min-height: 230px;
-  background: #fff;
+}
+
+.custom-quill-container-none .ql-container {
+  background: none;
+  border: none !important;
+}
+
+.max-container {
+  width: 100%;
+  height: 100%;
 }
 
 .ql-toolbar {
