Updated TopNav: MyLearning css, set max height and scrollable if the list is too long; Set scrollbar hidden in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -217,3 +217,13 @@ html::-webkit-scrollbar {
 .ant-table-body::-webkit-scrollbar {
   display: none; /* for Chrome, Safari, and Opera */
 }
+
+.learningCardList {
+  -ms-overflow-style: none !important; /* for Internet Explorer, Edge */
+  scrollbar-width: none !important; /* for Firefox */
+  overflow-y: scroll !important;
+}
+
+.learningCardList::-webkit-scrollbar {
+  display: none !important; /* for Chrome, Safari, and Opera */
+}
