--- a/app/globals.css
+++ b/app/globals.css
@@ -216,7 +216,11 @@ html::-webkit-scrollbar {
 }
 
 .ant-table-body::-webkit-scrollbar {
-  display: none; /* for Chrome, Safari, and Opera */
+  /* display: none; for Chrome, Safari, and Opera */
+}
+
+.custom-ant-none .ant-table-body::-webkit-scrollbar {
+  display: none !important; /* for Chrome, Safari, and Opera */
 }
 
 .learningCardList {
