--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -242,3 +242,20 @@ html::-webkit-scrollbar {
 .modal-box::-webkit-scrollbar {
   display: none !important; /* for Chrome, Safari, and Opera */
 }
+
+.react-daterange-picker__wrapper {
+  border-radius: 10px;
+  padding: 3px 5px;
+  border: 1px solid #d9d9d9 !important;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.react-daterange-picker__inputGroup__divider {
+  color: #d9d9d9 !important;
+  padding: 5px 0px !important;
+}
+
+.react-daterange-picker__inputGroup {
+  flex-grow: 0 !important;
+}
